--- a/Web Design/Form Validation/css/mystyle.css
+++ b/Web Design/Form Validation/css/mystyle.css
@@ -146,8 +146,8 @@ li {
     margin-left: 2em;
     margin-top: 4em;
     margin-right: 13%;
-    padding: 2% 3% 0 3% ;
-    height: fit-content;
+    padding: 0% 3% 0 3% ;
+    height: 57em;
 
 }
 
